--- a/app/views/likes/_like.html.erb
+++ b/app/views/likes/_like.html.erb
@@ -1,11 +1,11 @@
     <% if user_signed_in? && post.liked_by(current_user) %>
       <%=link_to "♥", post_likes_path(post.id),  method: :delete, class: "post_likes", remote: true %>
-      <span class = "post_likes_count"><%= "#{@post.likes.count}人がいいねをしています!" %></span>
+      <span class = "post_likes_count"><%= "#{post.likes.count}人が「いいね」をしています!" %></span>
     <% else %>
       <%=link_to "♡", post_likes_path(post.id), method: :post, class: "post_likes", remote: true %>
       <% if @post.likes.count == 0 %>
-      <span class = "post_likes_count"><%= "気に入ったらいいねをしましょう!" %></span>
-      <%else%>
-       <span class = "post_likes_count"><%= "#{@post.likes.count}人がいいねをしています!" %></span>
+      <span class = "post_likes_count"><%= "気に入ったら「いいね」をしましょう!" %></span>
+      <% else %>
+       <span class = "post_likes_count"><%= "#{post.likes.count}人が「いいね」をしています!" %></span>
        <%  end %>
     <% end %>
