--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -1,7 +1,7 @@
-    <div class="form-group comment-form">
+    <div class="form-group">
       <% if user_signed_in? %>
       <%= form_with model: [post, comment], id: "new_comment" do |form| %>
-        <%= form.text_area :text, class: "form-control input-md col-md-5", maxlength: "140", id: "js-new-comment-body" %><br>
+        <%= form.text_area :text, class: "form-control input-lg col-lg-5", maxlength: "140", id: "js-new-comment-body" %><br>
         <%= form.submit "コメントを投稿する", class: "btn btn-primary btn-lg" %>
         <% end %>
         <% else %>
