--- a/app/views/posts/next.html.erb
+++ b/app/views/posts/next.html.erb
@@ -1,41 +1,22 @@
 <%= render "shared/header"%>
 
 <div class="wrapper" >
-<div class="container-fluid img-hidden">
-<img src="/images/next.jpg" class="img-fluid">
-</div>
-<div class="index-message text-center">
-『次のシーズンで注力』ジャンルでは、1~3ヶ月後に販売強化を計画しているワインをまとめています。<br>
-仕入れの計画にお役立てください。
-</div>
-
-<div class="container container-w">
-  <div class="index-category">
-  <div class="left"><span style="font-size:180%"><b>次のシーズンで注力  </b></span>のすべての投稿 </div>
+  <div class="container-fluid img-hidden">
+    <img src="/images/next.jpg" class="img-fluid">
   </div>
-  <div class="row row-cols-3">
-  <% @posts.each do |post| %>
-  <div class="card">
-  <% if post.image.attached? %>
-   <%= image_tag post.image, class: "index-img d-block mx-auto" %>
-  <% else %>
-  <img class="index-img d-block mx-auto" src="<%= "/images/test_sample.png" %>" alt="Index image cap">
-  <% end %>
-  <div class="card-body">
-    <h5 class="card-title"><%=post.title %></h5>
-    <% if user_signed_in? %>
-    <p class="card-text">投稿者：<%=post.user.nickname %></p>
-    <% end %>
-    <p class="card-text">投稿日：<%=post.created_at.strftime('%Y/%m/%d') %></p>
-    <div class="text-center">
-    <a href=<%=post_path(post.id)%> class="btn btn-secondary">この投稿を見る</a>
+  <div class="index-message text-center">
+    『次のシーズンで注力』ジャンルでは、1~3ヶ月後に販売強化を計画しているワインをまとめています。<br>
+    仕入れの計画にお役立てください。
+  </div>
+
+  <div class="container container-w">
+    <div class="index-category">
+    <div class="left"><span style="font-size:180%"><b>次のシーズンで注力  </b></span>のすべての投稿 </div>
+    </div>
+    <div class="row row-cols-3">
+      <%= render partial: "card", locals: {posts: @posts} %>
     </div>
   </div>
-  </div>
-<% end %>
 </div>
-</div>
-
-
 
 <%= render "shared/footer"%>
