体裁整え・Profiles／Viewファイル

--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -1,6 +1,6 @@
 <%= render "shared/header"%>
 
-<div class="container outer-content">
+<div class="outer-content">
   <h2 class="post-title text-center", style="font-size:180%">投稿を編集</h2>
   <div class="form-group inner-content">
     <%= render partial: 'form', locals: {post: @post} %>
