--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -6,6 +6,11 @@
 
 /* post-index */
 
+.card-text-margin {
+  margin: 0 0 0.3em;
+
+}
+
 .app-title {
   font-family: 'Itim', cursive;
 }
@@ -18,7 +23,7 @@
 
 .container {
   margin-top: 80px;
-  width: 90vw;
+  width: 100vw;
 }
 
 .container-w{
@@ -150,7 +155,7 @@
 
 .container-posts
 {
-  margin-top: 0px;
+  margin-bottom: 20px;
 }
 
 .profile-show-wrapper {
@@ -181,4 +186,17 @@
 .followers {
   text-decoration: none;
   color: gray;
+}
+
+/*footer*/
+
+body {
+  position: relative;
+  padding-bottom: 20px;
+  min-height: 100vh;
+}
+
+.footer {
+  position: absolute;
+  bottom: 0;
 }
