--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -42,7 +42,7 @@
   </div>
 
   <div class='register-btn'>
-    <%= f.submit "会員登録" ,class: "btn btn-primary btn-lg" %>
+    <%= f.submit "新規会員登録" ,class: "btn btn-primary btn-lg" %>
   </div>
 </div>
 <% end %>
