--- a/app/views/posts/_card.html.erb
+++ b/app/views/posts/_card.html.erb
@@ -8,7 +8,7 @@
               <div class="card-body">
                 <h5 class="card-title"><%=post.title %></h5>
                 <% if user_signed_in? %>
-                  <p class="card-text">投稿者：<%=post.user.nickname %></p>
+                  <p class="card-text card-text-margin">投稿者：<%=post.user.nickname %></p>
                 <% end %>
                 <p class="card-text">投稿日：<%=post.created_at.strftime('%Y/%m/%d') %></p>
 
