--- a/app/views/posts/_card.html.erb
+++ b/app/views/posts/_card.html.erb
@@ -3,7 +3,7 @@
               <% if post.image.attached? %>
                 <%= image_tag post.image, class: "index-img d-block mx-auto" %>
               <% else %>
-                <img class="index-img d-block mx-auto" src="<%= "/images/test_sample.png" %>" alt="画像">
+                <img class="index-img d-block mx-auto" src="<%= "/images/sample.png" %>" alt="画像">
               <% end %>
               <div class="card-body">
                 <h5 class="card-title"><%=post.title %></h5>
