--- a/app/views/posts/wanted.html.erb
+++ b/app/views/posts/wanted.html.erb
@@ -5,7 +5,8 @@
     <img src="/images/wanted.jpg" class="img-fluid">
   </div>
   <div class="index-message text-center">
-  『探してます』ジャンルでは、多様な切り口でワインを探すための情報交換を目的としています。
+  『探してます』ジャンルは、多様な切り口でワインを探すための情報交換ができます。<br>
+  「商品名が分からない」「似たような商品を探している」という時にご活用ください。
   </div>
 
   <div class="container container-w">
