変更２・タイトル画像

--- a/app/views/posts/hot.html.erb
+++ b/app/views/posts/hot.html.erb
@@ -2,7 +2,7 @@
 
 <div class="wrapper" >
   <div class="container-fluid img-hidden">
-    <img src="/images/hot.jpg" class="img-fluid">
+    <img src="/images/hotimage.jpg" class="img-fluid">
   </div>
   <div class="index-message text-center">
     『今売れてます』ジャンルでは、現在店頭で売れているワインの投稿をまとめています。<br>
