--- a/app/views/posts/next.html.erb
+++ b/app/views/posts/next.html.erb
@@ -2,7 +2,7 @@
 
 <div class="wrapper" >
   <div class="container-fluid img-hidden">
-    <img src="/images/next.jpg" class="img-fluid">
+    <img src="/images/nextimage.jpg" class="img-fluid">
   </div>
   <div class="index-message text-center">
     『次のシーズンで注力』ジャンルでは、1~3ヶ月後に販売強化を計画しているワインをまとめています。<br>
