--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -2,7 +2,7 @@
 
 <div class="wrapper" >
   <div class="container-fluid img-hidden">
-    <img src="/images/index.jpg" class="img-fluid">
+    <img src="/images/indeximage.jpg" class="img-fluid">
   </div>
   <div class="index-message text-center">
     『<b><span class="app-title ">WINE SHOP CLUB</span></b>』はワイン小売業者間で“現場の声”を共有するサイトです。<br>
