Revert "変更２・タイトル画像"
This reverts commit 28b1e5a07c64317052c7f6630ced22d3edc7b71d.

--- a/app/views/posts/wanted.html.erb
+++ b/app/views/posts/wanted.html.erb
@@ -2,7 +2,7 @@
 
 <div class="wrapper" >
   <div class="container-fluid img-hidden">
-    <img src="/images/wantedimage.jpg" class="img-fluid">
+    <img src="/images/wanted.jpg" class="img-fluid">
   </div>
   <div class="index-message text-center">
   『探してます』ジャンルは、多様な切り口でワインを探すための情報交換ができます。<br>
