追加・いいね一覧機能

--- a/app/views/posts/hot.html.erb
+++ b/app/views/posts/hot.html.erb
@@ -5,7 +5,7 @@
     <img src="/images/hotimage.jpg" class="img-fluid">
   </div>
   <div class="index-message text-center">
-    『今売れてます』ジャンルでは、現在店頭で売れているワインの投稿をまとめています。<br>
+    『<b>今売れてます</b>』ジャンルでは、現在店頭で売れているワインの情報をまとめています。<br>
     店頭販促や試飲メニューとして、今売るべきワインが揃っています。
   </div>
 
