--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -5,7 +5,7 @@
     <img src="/images/indeximage.jpg" class="img-fluid">
   </div>
   <div class="index-message text-center">
-    『<b><span class="app-title ">WINE SHOP CLUB</span></b>』はワイン小売業者間で“現場の声”を共有するサイトです。<br>
+    『<b><span class="app-title" style="font-size:120%">WINE SHOP CLUB</span></b>』は、ワイン小売業者間での情報交換の推進を目的としています。<br>
     『<b>今売れてます</b>』『<b>次のシーズンで注力</b>』『<b>探してます</b>』の三つのジャンルでワインに関する情報を投稿できます。<br>
     店頭販促や仕入れの計画にお役立てください。
   </div>
