--- a/app/views/posts/next.html.erb
+++ b/app/views/posts/next.html.erb
@@ -5,7 +5,7 @@
     <img src="/images/nextimage.jpg" class="img-fluid">
   </div>
   <div class="index-message text-center">
-    『次のシーズンで注力』ジャンルでは、1~3ヶ月後に販売強化を計画しているワインをまとめています。<br>
+    『<b>次のシーズンで注力</b>』ジャンルでは、販売強化を検討しているワインの情報をまとめています。「次のシーズン」はおよそ1~3ヶ月後を想定しています。<br>
     仕入れの計画にお役立てください。
   </div>
 
