--- a/app/views/posts/wanted.html.erb
+++ b/app/views/posts/wanted.html.erb
@@ -5,8 +5,8 @@
     <img src="/images/wantedimage2.jpg" class="img-fluid">
   </div>
   <div class="index-message text-center">
-  『探してます』ジャンルは、多様な切り口でワインを探すための情報交換ができます。<br>
-  「商品名が分からない」「似たような商品を探している」という時にご活用ください。
+  『<b>探してます</b>』ジャンルは、ワインを探すための情報交換を目的としています。<br>
+  「商品名が分からない」「似たようなワインを探している」「仕入れについてアドバイスが欲しい」・・・など幅広い相談を受け付けています。
   </div>
 
   <div class="container container-w">
