--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -14,7 +14,7 @@
   </div>
 
   <div class="container container-s">
-    <div class="row">
+    <div class="row row-eq-height">
       <div class="col-md-6">
         <% if @post.image.attached? %>
           <%= image_tag @post.image, class: "post-show-img d-block mx-auto" %>
