--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,42 +1,36 @@
 <link href='https://fonts.googleapis.com/css2?family=Itim&display=swap' rel="stylesheet">
 <body>
-<nav class="navbar navbar-expand-lg navbar- bg-light">
-  <div class="container-fluid">
-    <a class="navbar-brand" href="/posts">WINE SHOP CLUB</a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <% if user_signed_in? %>
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-      <% unless current_page?("/users/#{current_user.id}/profiles")%>
-        <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="/users/<%= current_user.id %>/profiles">マイページ</a>
-        </li>
-      <% end %>
-        <li class="nav-item">
-          <a class="nav-link" href="/posts/new">新規投稿</a>
-        </li>
-        <li class="nav-item" class="text-decoration-none">
-          <%= link_to "ログアウト", destroy_user_session_path, method: :delete, class: 'nav-link' %>
-        </li>
-    
-      <!--<form class="d-flex">
-        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-        <button class="btn btn-outline-success" type="submit">Search</button>
-      </form>
-    </div>-->
+  <nav class="navbar navbar-expand-lg navbar- bg-light">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="/posts">WINE SHOP CLUB</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <% if user_signed_in? %>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <% unless current_page?("/users/#{current_user.id}/profiles")%>
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="/users/<%= current_user.id %>/profiles">マイページ</a>
+              </li>
+            <% end %>
+            <li class="nav-item">
+              <a class="nav-link" href="/posts/new">新規投稿</a>
+            </li>
+            <li class="nav-item" class="text-decoration-none">
+              <%= link_to "ログアウト", destroy_user_session_path, method: :delete, class: 'nav-link' %>
+            </li>
 
-    <% else %>
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="/users/sign_in">ログイン</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="<%=new_user_registration_path%>">会員登録</a>
-          </li>
-    <% end %>
+      <% else %>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="/users/sign_in">ログイン</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="<%=new_user_registration_path%>">会員登録</a>
+            </li>
+      <% end %>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">投稿ジャンル</a>
               <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
@@ -49,4 +43,6 @@
           </li>
         </ul>
       </div>
+  </div>
 </nav>
+
